--- a/Common.props
+++ b/Common.props
@@ -4,6 +4,7 @@
   <PropertyGroup Label="UserMacros">
     <BaseDir>$(SolutionDir)..\..\..\</BaseDir>
     <TimeDir>$(BaseDir)time-android\</TimeDir>
+    <__archive>$(BaseDir)archive\</__archive>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
@@ -13,6 +14,9 @@
     </BuildMacro>
     <BuildMacro Include="TimeDir">
       <Value>$(TimeDir)</Value>
+    </BuildMacro>
+    <BuildMacro Include="__archive">
+      <Value>$(__archive)</Value>
     </BuildMacro>
   </ItemGroup>
 </Project>
