--- a/windowing_android/nord_windowing_android.vcxproj
+++ b/windowing_android/nord_windowing_android.vcxproj
@@ -195,7 +195,7 @@
     <ClCompile Include="node.cpp" />
     <ClCompile Include="operating_system\direct.cpp" />
     <ClCompile Include="operating_system\driver.cpp" />
-    <ClCompile Include="operating_system\java_ace_app.cpp" />
+    <ClCompile Include="operating_system\java_ace_ace.cpp" />
     <ClCompile Include="operating_system\java_ace_impact.cpp" />
     <ClCompile Include="operating_system\jni_environment.cpp" />
     <ClCompile Include="operating_system\object.cpp" />
