--- a/_seed/.workspace/android_app_simple_drawing/bin/.project
+++ b/_seed/.workspace/android_app_simple_drawing/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>android_app_simple_form</name>
+	<name>android_app_simple_drawing</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src0</name>
+			<type>2</type>
+			<location>C:/basis/archive/seed-android/app-simple/drawing/app/src/main/java</location>
+		</link>
+	</linkedResources>
 </projectDescription>
