--- a/apex_android/nord_apex_android.vcxproj.filters
+++ b/apex_android/nord_apex_android.vcxproj.filters
@@ -25,6 +25,9 @@
     <ClCompile Include="node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="interprocess_communication.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="os_context.h">
@@ -52,6 +55,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="interprocess_communication.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
